--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,14 +4,14 @@ pipeline {
         maven 'M2_HOME'
     }
     environment {
-    registry = '076892551558.dkr.ecr.us-east-1.amazonaws.com/devop_repository'
+    registry = '231402041009.dkr.ecr.us-east-1.amazonaws.com/jenkins-images'
     registryCredential = 'jenkins-ecr'
     dockerimage = ''
   }
     stages {
         stage('Checkout'){
             steps{
-                git branch: 'main', url: 'https://github.com/Hermann90/helloworld_jan_22.git'
+                git branch: 'main', url: 'https://github.com/jawidsaboori/hellowolrd19.git'
             }
         }
         stage('Code Build') {
