--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,4 +1,7 @@
 pipeline {
+triggers {
+  pollSCM('* * * * *')
+}
     agent any
     tools{
         maven 'M2_HOME'
@@ -9,21 +12,35 @@ pipeline {
     dockerimage = ''
   }
     stages {
-        stage('Checkout'){
-            steps{
-                git branch: 'main', url: 'https://github.com/jawidsaboori/hellowolrd19.git'
-            }
-        }
-        stage('Code Build') {
+
+        stage('build & Sonar analysis') {
+            agent {
+        docker { image 'maven:3.8.6-openjdk-11-slim' }
+                }
+            
+#            Steps {
+#               withSonarQubeEnv('SonarServer') {
+#                  sh 'mvn sonar:sonar -Dsonar.'
+#        }           
+#            }
+        
+#        stage('Checkout'){
+#            steps{
+#                git branch: 'main', url: 'https://github.com/jawidsaboori/hellowolrd19.git'
+#            }
+#        }
+        stage('maven package') {
             steps {
-                sh 'mvn clean package'
+                sh 'mvn clean'
+                sh 'mvn install -Dskiptests'
+                sh 'mvn package -Dskiptests'
             }
         }
-        stage('Test') {
-            steps {
-                sh 'mvn test'
-            }
-        }
+#        stage('Test') {
+#            steps {
+#                sh 'mvn test'
+#            }
+#        }
         stage('Build Image') {
             steps {
                 script{
