--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,38 +1,39 @@
+
 pipeline {
-triggers {
+    triggers {
   pollSCM('* * * * *')
 }
     agent any
-    tools{
-        maven 'M2_HOME'
-    }
-    environment {
+     tools {
+  maven 'M2_HOME'
+}
+environment {
     registry = '231402041009.dkr.ecr.us-east-1.amazonaws.com/jenkins-images'
     registryCredential = 'jenkins-ecr'
     dockerimage = ''
-  }
+}
+
     stages {
 
-        stage('build & Sonar analysis') {
+        stage("build & Sonar analysis") {
             agent {
         docker { image 'maven:3.8.6-openjdk-11-slim' }
-                }
-       stage('Checkout'){
-           steps{
-               git branch: 'main', url: 'https://github.com/jawidsaboori/hellowolrd19.git'
-           }
-        }
+    }
+    
+
         stage('maven package') {
             steps {
                 sh 'mvn clean'
-                sh 'mvn install -Dskiptests'
-                sh 'mvn package -Dskiptests'
+                sh 'mvn install -DskipTests'
+                sh 'mvn package -DskipTests'
             }
         }
         stage('Build Image') {
+
             steps {
                 script{
-                    dockerImage = docker.build registry + ":$BUILD_NUMBER"
+                  def mavenPom = readMavenPom file: 'pom.xml'  
+                    dockerImage = docker.build registry + ":${mavenPom.version}"
                 } 
             }
         }
