--- a/jenkinsfile
+++ b/jenkinsfile
@@ -16,7 +16,7 @@ environment {
     stages {
 
         stage("build & Sonar analysis") {
-            agent {
+            steps {
         docker { image 'maven:3.8.6-openjdk-11-slim' }
     }
     
