--- a/jenkinsfile
+++ b/jenkinsfile
@@ -17,8 +17,8 @@ environment {
 
          stage("build & Sonar analysis") {
             steps {
-                docker { image 'maven:3.8.6-openjdk-11-slim' }
-    }
+                docker "image 'maven:3.8.6-openjdk-11-slim"
+        }
     
 
         stage('maven package') {
