--- a/jenkinsfile
+++ b/jenkinsfile
@@ -30,7 +30,8 @@ triggers {
         stage('Build Image') {
             steps {
                 script{
-                    dockerImage = docker.build registry + ":$BUILD_NUMBER"
+                  def mavenPom = readMavenPom file: 'pom.xml'
+                    dockerImage = docker.build registry + ":${mavenPom.version}"
                 } 
             }
         }
