--- a/jenkinsfile
+++ b/jenkinsfile
@@ -30,8 +30,7 @@ triggers {
         stage('Build Image') {
             steps {
                 script{
-                  def mavenPom = readMavenPom file: 'pom.xml'
-                    dockerImage = docker.build registry + ":${mavenPom.version}"
+                    dockerImage = docker.build registry + ":$BUILD_NUMBER"
                 } 
             }
         }
